# GravitySim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: circle.cpp  circle.h  constants.h  glad.c  main.cpp  renderer.cpp  renderer.h
